# ECE_Material

./: README.md
CHEM121/: exam#1cc.rtf  exam%20#3%20aa.rtf  exam%20#3%20bb.rtf  exam%20#3%20cc.rtf  exam1aa.rtf  exam1bb.rtf  exam2aa.rtf  exam2bb.rtf  exam2cc.rtf
CS341/: asm-example.txt  kernels.c
DSP/: 30 Second Sample.txt  Sample Data.txt  WienerNoiseReduction.m  detrendData.m  findTrend.m  gyroScopeFiltering4.m  realTimeFilter1.m  reconstructData.m
ECE101/: matlab.m
ECE131/: 7-4.c  7-6.c  ArrayAddition  HARDWORK  Untitled Document 1  a.out  bookprogram7-4  bookprogram7-6  hardwork.c  homework  homework2  homework3  homework3-10.c  homework3-6  homework3-6.c  homework4-2.c  homework4-3.c  homework4.c  homework6.c  hw5.c  swapnibbles.c  swapnibbles.map  text  vimrc.txt
ECE206/: calcBlockDiagram.vi  david edition.vi  insrumentation final project.vi
ECE231/ctocpp/: CHANGES  CONTENT  INSTALL  README  aclocal.m4  allhead  allhead.bat  config.status  configure  configure.ac  ctocpp  ctocpp.bat  ctocpp.html  ctocpp.info  ctocpp.texi  lexer.py  mkclass  mkclass.bat  mkcpp  mkcpp.bat  mkdoc  mkdoc.bat  mkheader  mkheader.bat  mkheader.py  mklist  mklist.bat  mktar  mkzip.bat  mover  mover.bat  pattern.py  pkg-info  search  search.bat  setup  setup.py  wstring.py
ECE231/ctocpp/c2cpp/: allhead.py  ctocpp.py  iscomp.py  lexer.py  mkclass.py  mkcpp.py  mkdict.py  mkheader.py  mklist.py  mover.py  objlist.py  pattern.py  pmake.py  search.py  wstring.py
ECE238/: Lab5Test.vhd  counter.ucf  counter.vhd  lab 5.vhd  lab5tb.vhd  mux.drc
ECE314/: Paper 1.docx
ECE440/: jp  (+4 more)
(+4191 files in other folders)
